<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/switchEnabled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enabled" />

        <EditText android:id="@+id/inputBotToken" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/telegram_token"/>
        <EditText android:id="@+id/inputChatId" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/telegram_chat_id"/>
        <Spinner android:id="@+id/spinnerParseMode" android:layout_width="match_parent" android:layout_height="wrap_content"/>
        <EditText android:id="@+id/inputHeaderPrefix" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/subject_prefix"/>

        <CheckBox android:id="@+id/chkDisablePreview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/telegram_disable_preview"/>
        <CheckBox android:id="@+id/chkSilent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/telegram_silent"/>
        <CheckBox android:id="@+id/chkProtect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/telegram_protect"/>

        <EditText android:id="@+id/inputWhitelist" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/channel_whitelist_hint"/>

        <!-- NEW: contains filter -->
        <EditText android:id="@+id/inputContainsTg" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/contains_filter"/>

        <!-- NEW: editable template -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Template (use {title},{text},{package},{time})"
            android:paddingTop="8dp"/>

        <EditText
            android:id="@+id/inputTemplateBodyTg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="6"
            android:gravity="top|start"
            android:fontFamily="monospace"
            android:inputType="textMultiLine"/>

        <Button android:id="@+id/btnSave" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/save"/>
        <Button android:id="@+id/btnSendTestTelegram" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/send_test"/>
    </LinearLayout>
</ScrollView>
